# Google_Maps_Scraper

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/rules/: fastapi.md  frontend.md  git.md  python.md
.claude/skills/: add-api-endpoint.md  add-service.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  start.sh
backend/app/: config.py  main.py  schemas.py
backend/app/api/: batches.py  jobs.py  results.py  stats.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 207256083844_add_lead_management_fields.py  68d84006fdb1_add_layer_status_fields_to_jobs.py  80f37cc4c47e_create_tables.py  a23a8632738d_add_batches_and_email_fields.py  b4b4d9c00244_add_layer_status_fields_to_jobs.py  e31739a346be_add_lead_management_fields.py
backend/app/models/: __init__.py  job.py  lead.py
backend/app/services/: dedup.py  email.py  email_scraper.py  geocoder.py  grid.py  outscraper_api.py  playwright_scraper.py  serp_api.py
backend/app/tasks/: __init__.py  scrape.py
backend/tests/: conftest.py  test_dedup.py  test_grid.py  test_playwright_scraper.py
docs/: api-reference.md  deployment.md  getting-started.md  phase1-design.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: JobStatus.tsx  ResultsTable.tsx  ScrapeForm.tsx
(+6 files in other folders)
